# kuava

./: .gitignore  CMakeLists.txt  README.md  init.cmd  main.cpp
src/: Solution.cpp  Solution.h  Solution.java  Solution_template.java  bootStrap.java  sout.java
src/Cph/: main.cpp
src/RUN/: Solution.c  Solution.cpp  Solution.h  Solution.java  main.c  main.cpp  test.c
src/RUN/cpp/: Solution.cpp  Solution.h  main  main.cpp
src/RUN/java/: Solution.java  Solution_template.java
src/temp/: 1769.移动所有球到每个盒子所需的最小操作数.c  1964.找出到每个位置为止最长的有效障碍赛跑路线.c  391.完美矩形.c  843.猜猜这个单词.c
src/template/: DEBUG.md  生僻函数.h
src/template/CPP/: A1算法基础_枚举.cpp
src/template/DP动态规划/: LCS.h
src/template/Java/: Math.java  TopoSort.java  Trie.java  tmp_BFS搜索.java  tmp_DFS搜索.java  图上并查集.java  并查集.java
src/template/cplusplus/: A2模拟.java  A3递归_分治.java
src/template/cpp/: A2模拟.java  A3递归_分治.java  Solution.cpp  Solution.h  main  main.cpp
src/template/二分图/: 染色法判定.h
src/template/二分查找/: bsearch.h
src/template/位运算/: bit.h
src/template/函数/: func.cpp
src/template/前缀和/: preSum.cpp
src/template/区间和/: 区间和.cpp
src/template/单调栈/: MonotonousStack.h  singleStack.cpp
src/template/启发式搜索/: 启发式搜索.cpp
src/template/哈希表/: HashMap.java
src/template/回溯/: backTrack.h
src/template/图/: SPA.cpp  SPA_template.cpp  store.cpp
src/template/字典树/: Trie.cpp
src/template/并查集/: DsuFind.cpp  DsuFind_rollback.cpp  UnionFind.cpp
src/template/排序/: sort_bubbleSort  sort_bubbleSort.cpp  sort_insert  sort_insert.cpp  sort_merge.cpp  sort_select.cpp  变种.cpp  排序.md  选择排序.h
src/template/数论/: math.h
(+94 files in other folders)
